# lan-meeting

./: .gitignore  PLAN.md  PLATFORM_SETUP.md  SIMPLE_STREAMING_OPTIMIZATION.md  dev-win.cmd  index.html  package.json  tsconfig.json  uno.config.ts  viewer.html  vite.config.ts
src/: App.tsx  index.tsx  viewer.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/decoder/: dxva.rs  gstreamer.rs  mod.rs  software.rs  vaapi.rs  videotoolbox.rs
src-tauri/src/decoder/vulkan/: mod.rs
src-tauri/src/encoder/: mod.rs  nvenc.rs  scaler.rs  software.rs  vaapi.rs  videotoolbox.rs
src-tauri/src/encoder/ffmpeg/: mod.rs
src-tauri/src/input/: controller.rs  events.rs  macos.rs  mod.rs
src-tauri/src/network/: discovery.rs  mod.rs  protocol.rs  quic.rs
src-tauri/src/renderer/: mod.rs  wgpu_renderer.rs  window.rs
src-tauri/src/simple_streaming/: mod.rs
src-tauri/src/streaming/: mod.rs
src-tauri/src/transfer/: mod.rs
src/components/AddDeviceModal/: index.tsx
src/components/Chat/: index.tsx
src/components/DeviceList/: index.tsx
src/components/FileTransfer/: index.tsx
src/components/MeetingRoom/: index.tsx
src/components/ScreenShare/: index.tsx
src/components/Settings/: index.tsx
src/components/Viewer/: index.tsx
src/stores/: app.ts
src/types/: webcodecs.d.ts
